<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openeb_vendor</name>
  <version>2.3.2</version>
  <description>Vendor library for OpenEB of ROS 2.</description>
  <maintainer email="nx.tardis@gmail.com">homalozoa</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libglew-dev</build_depend>
  <build_depend>libglfw3-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
